--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/stockey_logo.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/stockey_logo.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="./public/img/favi.png" />
+  
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;700&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>당신의 키워드 - Stockey</title>
+    <title>나만의 키워드 - Stockey</title>
   </head>
   <body>
     <div id="root"></div>
